--- a/HRISCapsu/Reports/rptNewRegularNonAcademicEmployees.rdlc
+++ b/HRISCapsu/Reports/rptNewRegularNonAcademicEmployees.rdlc
@@ -1043,7 +1043,7 @@
                             <Paragraph>
                               <TextRuns>
                                 <TextRun>
-                                  <Value>=Fields!bs_course.Value</Value>
+                                  <Value>=IIF(LEN(Fields!bs_course.Value)  = 0, "N/A", Fields!bs_course.Value)</Value>
                                   <Style>
                                     <FontSize>8pt</FontSize>
                                   </Style>
@@ -1076,7 +1076,7 @@
                             <Paragraph>
                               <TextRuns>
                                 <TextRun>
-                                  <Value>=Fields!bs_year_graduated.Value</Value>
+                                  <Value>=IIF(LEN(Fields!bs_year_graduated.Value)  = 0, "N/A", Fields!bs_year_graduated.Value)</Value>
                                   <Style>
                                     <FontSize>8pt</FontSize>
                                   </Style>
@@ -1109,7 +1109,7 @@
                             <Paragraph>
                               <TextRuns>
                                 <TextRun>
-                                  <Value>=Fields!bs_school.Value</Value>
+                                  <Value>=IIF(LEN(Fields!bs_school.Value)  = 0, "N/A", Fields!bs_school.Value)</Value>
                                   <Style>
                                     <FontSize>8pt</FontSize>
                                   </Style>
@@ -1142,7 +1142,7 @@
                             <Paragraph>
                               <TextRuns>
                                 <TextRun>
-                                  <Value>=Fields!eligibility.Value</Value>
+                                  <Value>=IIF(LEN(Fields!eligibility.Value)  = 0, "N/A", Fields!eligibility.Value)</Value>
                                   <Style>
                                     <FontSize>8pt</FontSize>
                                   </Style>
