--- a/HRISCapsu/Reports/rptNewAllNonAcademicEmployees.rdlc
+++ b/HRISCapsu/Reports/rptNewAllNonAcademicEmployees.rdlc
@@ -1044,7 +1044,7 @@
                             <Paragraph>
                               <TextRuns>
                                 <TextRun>
-                                  <Value>=Fields!bs_course.Value</Value>
+                                  <Value>=IIF(LEN(Fields!bs_course.Value)  = 0, "N/A", Fields!bs_course.Value)</Value>
                                   <Style>
                                     <FontSize>8pt</FontSize>
                                   </Style>
@@ -1077,7 +1077,7 @@
                             <Paragraph>
                               <TextRuns>
                                 <TextRun>
-                                  <Value>=Fields!bs_year_graduated.Value</Value>
+                                  <Value>=IIF(LEN(Fields!bs_year_graduated.Value)  = 0, "N/A", Fields!bs_year_graduated.Value)</Value>
                                   <Style>
                                     <FontSize>8pt</FontSize>
                                   </Style>
@@ -1110,7 +1110,7 @@
                             <Paragraph>
                               <TextRuns>
                                 <TextRun>
-                                  <Value>=Fields!bs_school.Value</Value>
+                                  <Value>=IIF(LEN(Fields!bs_school.Value)  = 0, "N/A", Fields!bs_school.Value)</Value>
                                   <Style>
                                     <FontSize>8pt</FontSize>
                                   </Style>
@@ -1143,7 +1143,7 @@
                             <Paragraph>
                               <TextRuns>
                                 <TextRun>
-                                  <Value>=Fields!eligibility.Value</Value>
+                                  <Value>=IIF(LEN(Fields!eligibility.Value)  = 0, "N/A", Fields!eligibility.Value)</Value>
                                   <Style>
                                     <FontSize>8pt</FontSize>
                                   </Style>
